--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-device-info": "^0.10.1",
     "react-native-elements": "^0.9.2",
     "react-native-google-analytics-bridge": "^5.0.0",
+    "react-native-popup-dialog": "^0.7.22",
     "react-native-router-flux": "^3.37.0",
     "react-native-side-menu": "^0.20.1",
     "react-native-tab-view": "0.0.57",
