--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/www"]
 	path = src/www
-	url = git@github.com:phodal/rn-cordova-test-web.git
+	url = https://github.com/phodal/rn-cordova-test-web 
